// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Border > handles responsive value 1`] = `
{
  "classNames": [
    "_root_a76fc7",
    "_null_a76fc7",
    "_--border-neutral--m_a76fc7",
    "_--border-transparent--l_a76fc7",
  ],
}
`;

exports[`Styles/Border > handles undefined value 1`] = `null`;

exports[`Styles/Border > handles value 1`] = `
{
  "classNames": [
    "_root_a76fc7",
    "_--border-primary_a76fc7",
  ],
}
`;
